--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -17,7 +17,7 @@ env:
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   TZ: Asia/Shanghai
-  DEVICE: Xiaomi Redmi Router AX6000
+  DEVICE: Xiaomi-Redmi-Router-AX6000
   UPLOAD_OUTPUT: true
 
 jobs:
