--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -130,6 +130,11 @@ jobs:
         cd openwrt
         make -j$(nproc)
         echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        
+    - name: 保存config
+      run: |
+        cp openwrt/.config openwrt/bin
+        cp openwrt/.config openwrt/bin/targets/*/*/*
 
     - name : 上传输出文件
       uses: actions/upload-artifact@master
@@ -140,6 +145,7 @@ jobs:
         
     - name: 整理输出文件
       run: |
+        mv openwrt/.config openwrt/bin
         cd openwrt/bin/targets/*/*
         rm -rf packages
     
