--- a/.github/workflows/immortalwrt-mt798x-24.10.yaml
+++ b/.github/workflows/immortalwrt-mt798x-24.10.yaml
@@ -64,7 +64,7 @@ jobs:
         sudo chown $USER:$GROUPS /workdir
 
     - name: 克隆源码
-      working-directory: /mnt/workdir
+      working-directory: /workdir
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
