--- a/.github/workflows/immortalwrt-mt798x-24.10.yaml
+++ b/.github/workflows/immortalwrt-mt798x-24.10.yaml
@@ -68,7 +68,7 @@ jobs:
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
-        ln -sf /mnt/workdir/openwrt $GITHUB_WORKSPACE/openwrt
+        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
         
     - name: 加载自定义源
       run: |
